<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="nothing">Nothing</string>
    <string name="later">Later</string>
    <string name="save_as">Save as</string>
    <string name="file_saved">File saved successfully</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="out_of_memory_error">Out of memory error</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="error">Error: %s</string>
    <string name="open_with">Open with</string>
    <string name="edit_with">Edit with</string>
    <string name="edit">Edit</string>
    <string name="no_app_found">No valid app found</string>
    <string name="no_browser_found">No browser found</string>
    <string name="no_email_client_found">No email client found</string>
    <string name="set_as">Set as</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
    <string name="value_copied_to_clipboard_show">Value copied to clipboard:\n%s</string>
    <string name="dial_number">Dial number</string>
    <string name="unknown">Unknown</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="details">Details</string>
    <string name="notes">Notes</string>
    <string name="deleting_folder">Deleting folder \'%s\'</string>
    <string name="none">None</string>
    <string name="label">Label</string>
    <string name="transparent">Transparent</string>
    <string name="transparent_color">Transparent color</string>
    <string name="select_a_different_color">Select a different color</string>
    <string name="download">Download</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="previous">Previous</string>
    <string name="playpause">Play / Pause</string>
    <string name="next">Next</string>
    <string name="number">Number</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="request_the_required_permissions">Request the required permissions</string>
    <string name="no_access_to_contacts">The app could not access your contacts</string>
    <string name="no_phone_call_permission">App does not have the permission to initiate phone calls, please grant it in the device settings</string>
    <string name="insert_text_here">Insert text here</string>
    <string name="call_person">Call %s</string>
    <string name="confirm_calling_person">Confirm calling %s</string>
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="value">Value</string>
    <string name="value_cannot_be_empty">Value cannot be empty</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="add_to_existing_contact">Add to an existing contact</string>
    <string name="app_corrupt">App Corrupt</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="choose_video">Choose video</string>
    <string name="choose_contact">Choose contact</string>
    <string name="choose_file">Choose file</string>
    <string name="record_audio">Record audio</string>
    <string name="record_video">Record video</string>
    <string name="inserting">Inserting…</string>
    <string name="updating">Updating…</string>
    <string name="phone_storage">Phone storage</string>
    <string name="phone_storage_hidden">Phone storage (not visible by other apps)</string>
    <string name="audio">Audio</string>
    <string name="nickname_default">Default</string>
    <string name="nickname_other_name">Alias</string>
    <string name="nickname_maiden_name">Maiden name</string>
    <string name="nickname_short_name">Short name</string>
    <string name="nickname_initials">Initials</string>
    <string name="mobile">Mobile</string>
    <string name="main_number">Main</string>
    <string name="work_fax">Work Fax</string>
    <string name="home_fax">Home Fax</string>
    <string name="pager">Pager</string>
    <string name="no_phone_number_found">No phone number has been found</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="address_format">%A%n%D%n%B%n{%C}[, ]{%S}[ ]{%Z}%n%N%n</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="website_homepage">Homepage</string>
    <string name="website_blog">Blog</string>
    <string name="website_profile">Profile</string>
    <string name="website_ftp">FTP</string>
    <string name="relation_assistant">Assistant</string>
    <string name="relation_brother">Brother</string>
    <string name="relation_child">Child</string>
    <string name="relation_domestic_partner">Domestic Partner</string>
    <string name="relation_father">Father</string>
    <string name="relation_friend">Friend</string>
    <string name="relation_manager">Manager</string>
    <string name="relation_mother">Mother</string>
    <string name="relation_parent">Parent</string>
    <string name="relation_partner">Partner</string>
    <string name="relation_referred_by">Referred by</string>
    <string name="relation_relative">Relative</string>
    <string name="relation_sister">Sister</string>
    <string name="relation_spouse">Spouse</string>
    <string name="relation_contact">Contact</string>
    <string name="relation_acquaintance">Acquaintance</string>
    <string name="relation_met">Met</string>
    <string name="relation_co_worker">Co-worker</string>
    <string name="relation_colleague">Colleague</string>
    <string name="relation_co_resident">Co-resident</string>
    <string name="relation_neighbor">Neighbor</string>
    <string name="relation_sibling">Sibling</string>
    <string name="relation_kin">Kin</string>
    <string name="relation_kin_alt">Relative</string>
    <string name="relation_muse">Muse</string>
    <string name="relation_crush">Crush</string>
    <string name="relation_date">Date</string>
    <string name="relation_sweetheart">Sweetheart</string>
    <string name="relation_me">Me</string>
    <string name="relation_agent">Agent</string>
    <string name="relation_emergency">Emergency Contact</string>
    <string name="relation_superior">Boss</string>
    <string name="relation_subordinate">Subordinate</string>
    <string name="relation_husband">Husband</string>
    <string name="relation_wife">Wife</string>
    <string name="relation_son">Son</string>
    <string name="relation_daughter">Daughter</string>
    <string name="relation_grandparent">Grandparent</string>
    <string name="relation_grandfather">Grandfather</string>
    <string name="relation_grandmother">Grandmother</string>
    <string name="relation_grandchild">Grandchild</string>
    <string name="relation_grandson">Grandson</string>
    <string name="relation_granddaughter">Granddaughter</string>
    <string name="relation_uncle">Uncle</string>
    <string name="relation_aunt">Aunt</string>
    <string name="relation_nephew">Nephew</string>
    <string name="relation_niece">Niece</string>
    <string name="relation_father_in_law">Father-in-law</string>
    <string name="relation_mother_in_law">Mother-in-law</string>
    <string name="relation_son_in_law">Son-in-law</string>
    <string name="relation_daughter_in_law">Daughter-in-law</string>
    <string name="relation_brother_in_law">Brother-in-law</string>
    <string name="relation_sister_in_law">Sister-in-law</string>
    <string name="change_view_type">Change view type</string>
    <string name="grid">Grid</string>
    <string name="grid_pro">Grid (Pro)</string>
    <string name="uneven_grid">Uneven Grid</string>
    <string name="list">List</string>
    <string name="increase_column_count">Increase column count</string>
    <string name="reduce_column_count">Reduce column count</string>
    <string name="column_count">Column count</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="change_cover_image">Change cover image</string>
    <string name="select_photo">Select photo</string>
    <plurals name="column_counts">
        <item quantity="one">%d column</item>
        <item quantity="other">%d columns</item>
    </plurals>
    <string name="manage_blocked_numbers">Manage blocked numbers</string>
    <string name="not_blocking_anyone">You are not blocking anyone.</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="block_number">Block number</string>
    <string name="block_numbers">Block numbers</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="export_blocked_numbers">Export blocked numbers</string>
    <string name="import_blocked_numbers">Import blocked numbers</string>
    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
    <string name="set_as_default">Set as default</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="block_unknown_calls">Block calls from not stored contacts</string>
    <string name="block_unknown_messages">Block messages from not stored contacts</string>
    <string name="add_blocked_number_helper_text">Enter a number or a pattern (e.g. *12345*, +1*8888) to block all calls and messages from numbers matching the pattern.</string>
    <string name="must_make_default_caller_id_app">Can\'t block unknown numbers without caller ID permission.</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="search">Search</string>
    <string name="search_in_placeholder">Search in %s</string>
    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
    <string name="search_contacts">Search contacts</string>
    <string name="search_favorites">Search favorites</string>
    <string name="search_apps">Search apps</string>
    <string name="search_events">Search events</string>
    <string name="search_groups">Search groups</string>
    <string name="search_history">Search history</string>
    <string name="search_calls">Search calls</string>
    <string name="search_files">Search files</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="primary_color">Primary color</string>
    <string name="app_icon_color">App icon color</string>
    <string name="theme">Theme</string>
    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
    <string name="more_apps_from_us">More apps from us</string>
    <string name="invite_friends">Invite friends</string>
    <string name="rate_us">Rate us</string>
    <string name="follow_us">Follow us</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="contributors">Contributors</string>
    <string name="third_party_licences">Third party licences</string>
</resources>