<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customization_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/customization_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/customization_theme_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="@dimen/bigger_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingTop="@dimen/bigger_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/customization_theme_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/customization_theme"
                android:layout_toStartOf="@+id/customization_theme"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:text="@string/theme"/>

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/customization_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:background="@null"
                android:clickable="false"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/customization_text_color_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customization_theme_holder"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/customization_text_color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:text="@string/text_color"/>

            <ImageView
                android:id="@+id/customization_text_color"
                android:layout_width="@dimen/color_sample_size"
                android:layout_height="@dimen/color_sample_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:clickable="false"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/customization_background_color_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customization_text_color_holder"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/customization_background_color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:text="@string/background_color"/>

            <ImageView
                android:id="@+id/customization_background_color"
                android:layout_width="@dimen/color_sample_size"
                android:layout_height="@dimen/color_sample_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:clickable="false"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/customization_primary_color_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customization_background_color_holder"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/customization_primary_color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:text="@string/primary_color"/>

            <ImageView
                android:id="@+id/customization_primary_color"
                android:layout_width="@dimen/color_sample_size"
                android:layout_height="@dimen/color_sample_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:clickable="false"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/customization_app_icon_color_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customization_primary_color_holder"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/customization_app_icon_color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:text="@string/app_icon_color"/>

            <ImageView
                android:id="@+id/customization_app_icon_color"
                android:layout_width="@dimen/color_sample_size"
                android:layout_height="@dimen/color_sample_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:clickable="false"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/apply_to_all_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customization_app_icon_color_holder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="?attr/selectableItemBackground">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/apply_to_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:clickable="false"
                android:padding="@dimen/activity_margin"
                android:text="@string/apply_to_all_apps"
                android:textSize="@dimen/normal_text_size"/>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
