<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/about_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/about_faq_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:id="@+id/about_faq_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_question_mark_vector" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/about_faq"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/about_faq_icon"
                android:layout_alignBottom="@+id/about_faq_icon"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toEndOf="@+id/about_faq_icon"
                android:gravity="center_vertical"
                android:text="@string/frequently_asked_questions"
                android:textSize="@dimen/bigger_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_rate_us_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_faq_holder"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:id="@+id/about_rate_us_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_star_on_vector" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/about_rate_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/about_rate_us_icon"
                android:layout_alignBottom="@+id/about_rate_us_icon"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toEndOf="@+id/about_rate_us_icon"
                android:gravity="center_vertical"
                android:text="@string/rate_us"
                android:textSize="@dimen/bigger_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_invite_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_rate_us_holder"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:id="@+id/about_invite_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_add_person_vector" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/about_invite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/about_invite_icon"
                android:layout_alignBottom="@+id/about_invite_icon"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toEndOf="@+id/about_invite_icon"
                android:gravity="center_vertical"
                android:text="@string/invite_friends"
                android:textSize="@dimen/bigger_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_contributors_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_invite_holder"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:id="@+id/about_contributors_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_face_vector" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/about_contributors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/about_contributors_icon"
                android:layout_alignBottom="@+id/about_contributors_icon"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toEndOf="@+id/about_contributors_icon"
                android:gravity="center_vertical"
                android:text="@string/contributors"
                android:textSize="@dimen/bigger_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_more_apps_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_contributors_holder"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:id="@+id/about_more_apps_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_heart_vector" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/about_more_apps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/about_more_apps_icon"
                android:layout_alignBottom="@+id/about_more_apps_icon"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toEndOf="@+id/about_more_apps_icon"
                android:gravity="center_vertical"
                android:text="@string/more_apps_from_us"
                android:textSize="@dimen/bigger_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_email_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_more_apps_holder"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:id="@+id/about_email_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_email_vector" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/about_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/about_email_icon"
                android:layout_alignBottom="@+id/about_email_icon"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toEndOf="@+id/about_email_icon"
                android:gravity="center_vertical"
                android:text="@string/my_email"
                android:textSize="@dimen/bigger_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_licenses_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_email_holder"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:id="@+id/about_licenses_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_article_vector" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/about_licenses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/about_licenses_icon"
                android:layout_alignBottom="@+id/about_licenses_icon"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toEndOf="@+id/about_licenses_icon"
                android:gravity="center_vertical"
                android:text="@string/third_party_licences"
                android:textSize="@dimen/bigger_text_size" />

        </RelativeLayout>

        <com.simplemobiletools.commons.views.MyTextView
            android:id="@+id/about_follow_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_licenses_holder"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/follow_us"
            android:textSize="@dimen/bigger_text_size" />

        <ImageView
            android:id="@+id/about_facebook"
            android:layout_width="@dimen/social_logo"
            android:layout_height="@dimen/social_logo"
            android:layout_below="@+id/about_follow_us"
            android:layout_marginStart="@dimen/activity_margin"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_facebook_vector" />

        <ImageView
            android:id="@+id/about_reddit"
            android:layout_width="@dimen/social_logo"
            android:layout_height="@dimen/social_logo"
            android:layout_below="@+id/about_follow_us"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_toEndOf="@+id/about_facebook"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_reddit_vector" />

        <com.simplemobiletools.commons.views.MyTextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/about_facebook"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="v1.0\nCopyright © Simple Mobile Tools 2017" />

    </RelativeLayout>
</ScrollView>
